# nlkl.github.io

./: README.md  _config.yml  about.html  about.markdown  about.md  about.rst  atom.xml  blog.cabal  contact.markdown  feed.xml  index.html  posts.html  site.hs  stack.yaml  ui-template-main.html  ui-template-syntax.html  ui-template.html
_drafts/: 2015-05-24-what-i-dislike-about-fsharp.markdown
_includes/: footer.html  head.html  header.html
_layouts/: default.html  post.html
_posts/: 2015-05-24-what-i-dislike-about-fsharp.markdown
_sass/: _layout.scss
css/: normalize.min.css  style.css
functional-programming/fsharp/2015/05/24/: what-i-dislike-about-fsharp.html
posts/: 2015-05-24-new-blog.html  2015-05-24-new-blog.markdown  2015-05-24-what-i-dislike-about-fsharp.html  2015-05-24-what-i-dislike-about-fsharp.markdown  2016-09-28-option-types-in-csharp.markdown
redirects/functional-programming/fsharp/2015/05/24/: what-i-dislike-about-fsharp.html
redirects/update/2015/05/24/: new-blog.html
templates/: layout.html  post-feed.html  post-ref.html  post.html
update/2015/05/24/: new-blog.html
