name:                blog
version:             0.1.0.0
synopsis:            nlkl's blog
author:              Nils Lück
maintainer:          nils.luck@outlook.com
copyright:           2016 Nils Lück
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable blog
  main-is:             site.hs
  default-language:    Haskell2010
  ghc-options:         -threaded
  build-depends:       base == 4.*,
                       hakyll == 4.8.*
